--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "Thalman Thilak - Blog"
 description: "Product Manager, Rollout Specialist, AI Enthusiast"
 author:
   name: "Thalman Thilak"
-
+baseurl: "/blog"
 markdown: kramdown
 theme: minima
 plugins:
