--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: "Thalman Thilak - Blog"
 description: "Product Manager, Rollout Specialist, AI Enthusiast"
-author:
-  name: "Thalman Thilak"
+author: "Thalman Thilak"
 baseurl: "/blog"
 
 markdown: kramdown
