--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,8 @@ author: "Thalman Thilak"
 baseurl: "/blog"
 
 markdown: kramdown
-theme: jekyll-theme-cayman       # Modern, colorful
-theme: jekyll-theme-architect    # Professional
-theme: jekyll-theme-midnight     # Dark theme
-remote_theme: mmistakes/minimal-mistakes  # Very popular, highly customizable
+remote_theme: mmistakes/minimal-mistakes
+minimal_mistakes_skin: "dark"
 plugins:
   - jekyll-feed
   - jekyll-sitemap
