--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,17 @@
-title: "Thalman Thilak"
-description: "My thoughts on various topics"
-author: "Thalman Thilak"
+title: Thalman Thilak Blog
+description: My thoughts on various topics
+url: "https://thalmanthilak.github.io"
 baseurl: "/blog"
 
+# Build settings
 markdown: kramdown
+highlighter: rouge
 plugins:
   - jekyll-feed
   - jekyll-sitemap
 
-paginate: 5
+# Excerpt settings
+excerpt_separator: <!--more-->
+
+# Permalink structure
+permalink: /:year/:month/:day/:title/
